--- a/components/intro_text.html
+++ b/components/intro_text.html
@@ -29,16 +29,16 @@
         <ul>
         <li>CTS240-N850: Project Management - I need this course to finish my degree program.</li>
 
-        <li>WEB215-N801: Adv Markup and Scripting - I need this course to finish my degree program and I think it will help with the efficiency of my coding.</li>
+        <li>><a href="https://smoncur0.github.io/web215/introduction.html" style="color: gray;">WEB215-N801</a>: Adv Markup and Scripting - I need this course to finish my degree program and I think it will help with the efficiency of my coding.</li>
 
         <li>CSC251-N801: Advanced JAVA Programming - I need this course to finish my degree program.</li>
 
-        <li>WEB250-N801: Database Driven Websites - I enjoy the process of creating a website and I also need it for my degree program. </li>
+	<li><a href="introduction.html"  style="color: gray;">WEB250-N801</a>: Database Driven Websites - I enjoy the process of creating a website and I also need it for my degree program. </li>
 
 
         </ul>
     </li>
 		
 				<li>Funny/Interesting item about yourself: I have played the cello for 7 almost 8 years now.</li>
-				<li> I'd also like to share: During my freetime I really enjoy cooking along with baking.</li>
+				<li>I'd also like to share: During my freetime I really enjoy cooking along with baking.</li>
 </ul>
