--- a/components/header.html
+++ b/components/header.html
@@ -1,5 +1,5 @@
 <header>
-  <h1> Syd's Recipes</h1>
+  <h1> Sydney's Pen Guide</h1>
   <h2>Sydney Moncur WEB-215</h2>
           <p id="links">
            <!--  <a href="https://smoncur0.github.io/web215/brand.html">Brand</a>  |  -->
