--- a/components/footer_links.html
+++ b/components/footer_links.html
@@ -1,7 +1,5 @@
 <footer>
-    <h3>  
-   Quick and Eazy!
-    </h3>
+ 
         <p id="links">
             <a href="https://github.com/smoncur0/web215">Github Account</a> -
             <a href="https://smoncur0.github.io/">Github IO</a> -
@@ -27,5 +25,7 @@
 		document.getElementById("validation_link_html").setAttribute("href", "https://validator.w3.org/check?uri=" + location.href);
 		document.getElementById("validation_link_css").setAttribute("href", "https://jigsaw.w3.org/css-validator/validator?uri=" + location.href);
 </script>
-
+	
+     <h3>Smooth and Efficent!</h3>
+	
 </footer>
