--- a/components/contract_text.html
+++ b/components/contract_text.html
@@ -1,4 +1,5 @@
- <h2>Contract</h2>
+<main>
+<h2>Contract</h2>
 
   <p> I, <a href="introduction.html"  style="color: gray;">Sydney M Moncur</a> agree to abide by the terms in my 
    Spring 2022 web215-N801 Adv Markup and Scripting with my instructor, 
@@ -12,3 +13,5 @@
   not logins or showing up for class. As such, failure to turn in 
   assignments may show as an absences.</p>
   <p>Signed: Sydney M. Moncur, 10 January 2022</p>
+ 
+</main>
