--- a/components/brand_guide.html
+++ b/components/brand_guide.html
@@ -79,7 +79,7 @@
             
                 <li> Here is an example!</li>
             
-                <li><a href="https://smoncur0.github.io/web215/introduction.html" style="color: rgba(20, 80, 28, 0.945);">Link</a> For links within list.</li>
+                <li><a href="https://smoncur0.github.io/web215/introduction.html" style="color: rgba(20, 80, 28, 0.945);">SAMPLE</a>: For links within lists.</li>
 
                 <li> Text Color for links within lists: rgba(20, 80, 28, 0.945)</li>
 
