--- a/components/intro_form.html
+++ b/components/intro_form.html
@@ -62,7 +62,7 @@
 
         CSC251-N801: Advanced JAVA Programming - I need this course to finish my degree program.
 
-	    WEB250-N801: Database Driven Websites - I enjoy the process of creating a website and I also need it for my degree program. 
+      WEB250-N801: Database Driven Websites - I enjoy the process of creating a website and I also need it for my degree program. </textarea>
 
     
     <br>
