--- a/components/footer_links.html
+++ b/components/footer_links.html
@@ -24,6 +24,6 @@
 		document.getElementById("validation_link_css").setAttribute("href", "https://jigsaw.w3.org/css-validator/validator?uri=" + location.href);
 </script>
 	
-     <h3>Smooth and Efficent!</h3>
+     <h3>Smooth and Efficient!</h3>
 	
 </footer>
