--- a/components/intro_form.html
+++ b/components/intro_form.html
@@ -2,7 +2,7 @@
 <main>
        
     <figure style="text-align: center;">
-        <img src = "images/intro.png" alt = "Me"  height = "370" width = "327" />   
+        <img src = "images/intro.png" alt = "Me" />   
 	   <figcaption>In the South End area</figcaption>
   </figure>
 
