--- a/components/header.html
+++ b/components/header.html
@@ -1,12 +1,12 @@
 <header>
-  <h1> Sydney's Pen Guide</h1>
-  <h2>Sydney Moncur WEB-215</h2>
+  <h1> Sydney's Pen Guide </h1>
+
           <p id="links">
-           <!--  <a href="https://smoncur0.github.io/web215/brand.html">Brand</a>  |  -->
+           <a href="https://smoncur0.github.io/web215/brand.html">Brand</a>  |  
            <a href="https://smoncur0.github.io/web215/contract.html">Contract</a> |
            <a href="https://smoncur0.github.io/web215/introduction.html">Introduction</a> 
            <!-- <a href="https://smoncur0.github.io/web215/template.html">Template</a> | -->
-           <!--  <a href="https://smoncur0.github.io/web215/introduction_form.html">Introduction Form</a> -->
+           <a href="https://smoncur0.github.io/web215/introduction_form.html">Introduction Form</a> 
 
         </p>
 </header>
