--- a/components/footer_links.html
+++ b/components/footer_links.html
@@ -1,5 +1,5 @@
 <footer>
-  <h3>Smooth and Efficient!</h3>
+  <p>Smooth and Efficient!</p>
         <p id="links">
             <a href="https://github.com/smoncur0/web215">Github Account</a> -
             <a href="https://smoncur0.github.io/">Github IO</a> -
