--- a/components/footer_links.html
+++ b/components/footer_links.html
@@ -1,12 +1,11 @@
 <footer>
   <p>Smooth and Efficient!</p>
-        <p id="links">
-            <a href="https://github.com/smoncur0/web215">Github Account</a> -
-            <a href="https://smoncur0.github.io/">Github IO</a> -
-            <a href="https://smoncur0.github.io/web215">Github Course</a> - 
-            <a href="https://www.freecodecamp.org/smoncur0">FreeCodeCamp</a> -
-            <a href="https://www.codecademy.com/profiles/smoncur0">Codecademy</a> -
-            <a href="https://jsfiddle.net/user/smoncur0/fiddles/">JSFiddle</a> -
+        <p id="footer_links">
+            <a href="https://github.com/smoncur0/web215">Github Account</a> |
+            <a href="https://smoncur0.github.io/">Github IO</a> |
+            <a href="https://www.freecodecamp.org/smoncur0">FreeCodeCamp</a> |
+            <a href="https://www.codecademy.com/profiles/smoncur0">Codecademy</a> |
+            <a href="https://jsfiddle.net/user/smoncur0/fiddles/">JSFiddle</a> |
             <a href="https://www.linkedin.com/in//">LinkedIn</a> 
 
         </p>
