--- a/components/header.html
+++ b/components/header.html
@@ -4,7 +4,7 @@
           <p id="links">
            <a href="https://smoncur0.github.io/web215/brand.html">Brand</a>  |  
            <a href="https://smoncur0.github.io/web215/contract.html">Contract</a> |
-           <a href="https://smoncur0.github.io/web215/introduction.html">Introduction</a> 
+           <a href="https://smoncur0.github.io/web215/introduction.html">Introduction</a> |
            <!-- <a href="https://smoncur0.github.io/web215/template.html">Template</a> | -->
            <a href="https://smoncur0.github.io/web215/introduction_form.html">Introduction Form</a> 
 
