--- a/styles/default.css
+++ b/styles/default.css
@@ -40,11 +40,12 @@ html {
 }
  h4 {
     text-align: center;
-    font-family: fantasy; 
     font-size: 1.2em;
     line-height: 1.5em;
-    color: rgba(59, 23, 47, 0.699);
-    font-family: 'Cookie';
+    color: rgba(121, 14, 85, 0.884);
+    font-size: 25px;
+    font-style: italic;
+    font-family: sans-serif;
 }
 header > nav > ul > li > a {
    background-color: rgba(182, 144, 119, 0.89);
