--- a/components/footer_links.html
+++ b/components/footer_links.html
@@ -1,5 +1,5 @@
 <footer>
-  <p>Smooth and Efficient!</p>
+  <p id="tagline">Smooth and Efficient!</p>
         <p id="footer_links">
             <a href="https://github.com/smoncur0/web215">Github Account</a> |
             <a href="https://smoncur0.github.io/">Github IO</a> |
