--- a/components/contents.html
+++ b/components/contents.html
@@ -5,10 +5,9 @@
    <li><a href="https://smoncur0.github.io/web215/brand.html">Brand</a></li>
    <li><a href="https://smoncur0.github.io/web215/contract.html">Contract</a></li>
    <li><a href="https://smoncur0.github.io/web215/introduction.html">Introduction</a></li>
-   
-   <!-- <li><a href="https://smoncur0.github.io/web215/brand.html">Brand</a></li> -->
+
    <!-- <li><a href="https://smoncur0.github.io/web215/template.html">Template</a></li> -->
-   <!-- <li><a href="https://smoncur0.github.io/web215/introduction_form.html">Introduction Form</a></li> -->
+   <li><a href="https://smoncur0.github.io/web215/introduction_form.html">Introduction Form</a></li>
    
 </ul>
 
