--- a/components/brand_guide.html
+++ b/components/brand_guide.html
@@ -4,7 +4,7 @@
        
     
       <figure style="text-align: center;">
-            <img src = "images/intro.png" alt = "Me"  height = "370" width = "327" />   
+            <img src = "images/intro.png" alt = "Me"  />   
            <figcaption>Figcaption Style</figcaption>
       </figure>
     
