--- a/components/footer_links.html
+++ b/components/footer_links.html
@@ -13,11 +13,10 @@
         <p>
 	     Designed by Marie Tech &copy; 2022
         </p>
-            <a href="https://validator.w3.org/check?uri=" id="validation_link_html"><img src= "images/html.png" alt="Validate HTML!"
-                style= "border: 0; width: 88px; height: 31px" /></a> 
-            <a href="https://jigsaw.w3.org/css-validator/check/referer?uri=" id="validation_link_css"><img src= "images/css.png" alt="Validate CSS!"
-                style= "border: 0; width: 88px; height: 31px" /></a> 
-
+        <p id="validation">
+            <a href="https://validator.w3.org/check?uri=" id="validation_link_html">Validate HTML!</a> 
+            <a href="https://jigsaw.w3.org/css-validator/check/referer?uri=" id="validation_link_css">Validate CSS!</a> 
+        </p>
 <script>
 		document.getElementById("validation_link_html").setAttribute("href", "https://validator.w3.org/check?uri=" + location.href);
 		document.getElementById("validation_link_css").setAttribute("href", "https://jigsaw.w3.org/css-validator/validator?uri=" + location.href);
