--- a/components/intro_form.html
+++ b/components/intro_form.html
@@ -69,7 +69,7 @@
 	<input type="checkbox" id="yes" name="like" value="Yes">
 	<label for="yes">Yes</label><br>
 	<input type="checkbox" id="no" name="like" value="no">
-	<label for="no">Yes</label>
+	<label for="no">No</label>
 
     <br>
     <br>
