--- a/components/intro_form.html
+++ b/components/intro_form.html
@@ -53,13 +53,12 @@
     <br>
     <label for="also_share">I'd also like to share: </label>
     <br>
-    <textarea id="also_share" rows="2" cols="40" required>During my free time I really enjoy cooking along with baking.</textarea> 
-    
-    <label for="pen"> Team Ballpoint or Team Gel? </label>
-     <br>
+    <textarea id="also_share" rows="2" cols="40" required>During my free time I really enjoy cooking along with baking.</textarea><br>   
+  
+    <label for="pen"> Team Ballpoint or Team Gel? </label><br>
 
 	<input type="radio" id="ballpoint" name="pen" value="ballpoint">
-	<label for="ballpoint">Ballpoint</label>
+	<label for="ballpoint">Ballpoint</label>   
 	<input type="radio" id="gel" name="pen" value="gel">
 	<label for="gel">Gel</label><br>
 
